file(GLOB_RECURSE SOURCES "src/*.cpp")

add_executable(circle-partitioner "${SOURCES}")
target_link_libraries(circle-partitioner crew)
target_link_libraries(circle-partitioner safemain)
target_link_libraries(circle-partitioner luci_lang)
target_link_libraries(circle-partitioner luci_log)
target_link_libraries(circle-partitioner luci_import)
target_link_libraries(circle-partitioner luci_service)
target_link_libraries(circle-partitioner luci_pass)
target_link_libraries(circle-partitioner luci_export)
target_link_libraries(circle-partitioner luci_partition)
target_link_libraries(circle-partitioner arser)
target_link_libraries(circle-partitioner pepper_csv2vec)
target_link_libraries(circle-partitioner vconone)
target_link_libraries(circle-partitioner nncc_common)

install(TARGETS circle-partitioner DESTINATION bin)
